<resources>
    <string name="app_name">Android Academy</string>
    <string name="avatar">My photo</string>
    <string name="android">Android</string>
    <string name="school">School</string>
    <string name="pets">Pets</string>
    <string name="key1">Student of Android Academy</string>
    <string name="key2">Student of MPEI</string>
    <string name="key3">Cat\'s paw</string>
    <string name="message">Enter a message</string>
    <string name="send_message">SEND MESSAGE </string>
    <string name="about">Artem has been studying programming for 7 years. He\'s a 6th year student at MPEI. Goes to lectures in The Android Academy and studying development for Android.</string>
    <string name="email_adr">mailto:%s</string>
    <string name="title_recycler">List news</string>
    <string name="title_about">About</string>
    <string name="menu_about">About</string>
    <string name="menu_news">News</string>
    <string name="image_news">Image news</string>
    <string name="load_complete">Download complete</string>
    <string name="try_again">Try again</string>
    <string name="connection_failed">Connection is failed</string>
    <string name="food">Food</string>
    <string name="image_intro">Intro image</string>
    <string name="news">News</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="nytimes">NY Times</string>
    <string name="save">Save</string>
    <string name="download_news">Download news</string>
    <string name="download_complete">Download news complete</string>
    <string name="download_failed">Download news failed</string>
    <string name="download_progress">News are loaded</string>
    <string name="no_information">No information</string>
</resources>
