<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="182dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/avatar" />

    <ImageView
        android:id="@+id/imageTitle1"
        android:layout_width="@dimen/image_height"
        android:layout_height="@dimen/image_height"
        android:layout_below="@+id/photo"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_standart"
        android:contentDescription="@string/android" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/imageTitle1"
        android:layout_toEndOf="@id/imageTitle1"
        android:paddingLeft="@dimen/padding_text"
        android:text="@string/no_information"
        android:textSize="@dimen/text_size" />

    <ImageView
        android:id="@+id/imageTitle2"
        android:layout_width="@dimen/image_height"
        android:layout_height="@dimen/image_height"
        android:layout_below="@+id/imageTitle1"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_standart"
        android:contentDescription="@string/school" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/imageTitle2"
        android:layout_toEndOf="@id/imageTitle2"
        android:paddingLeft="@dimen/padding_text"
        android:text="@string/no_information"
        android:textSize="@dimen/text_size" />

    <ImageView
        android:id="@+id/imageTitle3"
        android:layout_width="@dimen/image_height"
        android:layout_height="@dimen/image_height"
        android:layout_below="@+id/imageTitle2"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_standart"
        android:contentDescription="@string/pets" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/imageTitle3"
        android:layout_toEndOf="@id/imageTitle3"
        android:paddingLeft="@dimen/padding_text"
        android:text="@string/no_information"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageTitle3"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_standart"
        android:layout_marginEnd="@dimen/margin_standart"
        android:text="@string/no_information"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_standart"
        android:layout_marginEnd="@dimen/margin_standart"
        android:ems="10"
        android:hint="@string/message"
        android:inputType="textPersonName"
        android:textSize="@dimen/text_size"/>

    <TextView
        android:id="@+id/send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/edit_message"
        android:layout_marginEnd="@dimen/margin_standart"
        android:layout_marginTop="@dimen/margin_standart"
        android:text="@string/send_message"
        android:textColor="@color/Red"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/margin_standart"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="@dimen/image_height"
            android:layout_height="@dimen/image_height"
            android:background="@android:color/background_light"
            android:layout_marginRight="@dimen/padding_text"
            app:srcCompat="@drawable/vk" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="@dimen/image_height"
            android:layout_height="@dimen/image_height"
            android:layout_marginLeft="@dimen/padding_text"
            app:srcCompat="@drawable/telegram_2" />

    </LinearLayout>

</RelativeLayout>
